# glpilib2

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  run-test.sh  setup.cfg
.github/workflows/: python-package.yml
docker-stuff/: apache2.conf  bootstrap-run.sh  database_dump.sql  docker-compose.yml  dumpsql.sh
docker-stuff/config-glpi/: config_db.php  glpicrypt.key
docs/: .buildinfo  Makefile  index.html  py-modindex.html  search.html
docs/_modules/: index.html
docs/_modules/glpilib2/: basic_wrapper.html
docs/source/: api.rst  conf.py  index.rst
docsource/: api.html  genindex.html  objects.inv  searchindex.js
docsource/_sources/: api.rst.txt
docsrc/: Makefile
docsrc/source/: conf.py
glpilib2/: __init__.py  basic_wrapper.py
src/docs/: Makefile  requirements.txt
src/docs/source/: api.rst  conf.py  index.rst
src/glpilib2/: __init__.py  basic_wrapper.py
tests/: basic_wrapper_test.py
