[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "glpilib2"
authors = [
    {name = "Marcelo Lacerda", email = "marceloslacerda@gmail.com"},
]
dynamic = ["version"]
dependencies = [
    "requests"
]
requires-python = ">= 3.10"
description = "A python library for interacting with GLPI API."
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest", "numpydoc", "sphinx"
]

[project.urls]
Homepage = "https://github.com/marceloslacerda/glpilib2"
Repository = "https://github.com/marceloslacerda/glpilib2.git"
Issues = "https://github.com/marceloslacerda/glpilib2/issues"

[tool.setuptools.dynamic]
version = {attr = "glpilib2.__version__"}
readme = {file = ["README.rst"]}
