[metadata]
name = glpilib2-msl09
version = attr: glpilib2.__version__
author = Marcelo Lacerda
author_email = marceloslacerda@gmail.com
description = A python library for interacting with GLPI API.
long_description = file: README.md
long_description_content_type = text/rst
url = https://github.com/marceloslacerda/glpi
project_urls =
    Bug Tracker = https://github.com/marceloslacerda/glpi/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Robot :: Telegram Bot Scaffold
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = glpilib2
install_requires =
    requests
python_requires = >=3.7
